InteractComponent not disappearing after resetting editor

--- a/Plugins/AW_InteractionSystem/AW_InteractionSystem.uplugin
+++ b/Plugins/AW_InteractionSystem/AW_InteractionSystem.uplugin
@@ -13,12 +13,12 @@
 	"CanContainContent": true,
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
-	"Installed": false,
+	"Installed": true,
 	"Modules": [
 		{
 			"Name": "AW_InteractionSystem",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "PreDefault"
 		}
 	],
 	"Plugins": [
