--- a/AW_FPPInteractSystem.uproject
+++ b/AW_FPPInteractSystem.uproject
@@ -21,6 +21,11 @@
 		{
 			"Name": "AW_InteractionSystem",
 			"Enabled": true
+		},
+		{
+			"Name": "InteractionSystemPlugin",
+			"Enabled": true,
+			"MarketplaceURL": "https://publish.unrealengine.com/v3/edit-product/e842c2ad479c42b29a6f57353fca3498"
 		}
 	]
 }
