--- a/Plugins/AW_InteractionSystem/AW_InteractionSystem.uplugin
+++ b/Plugins/AW_InteractionSystem/AW_InteractionSystem.uplugin
@@ -1,30 +1,32 @@
 {
-	"FileVersion": 3,
-	"Version": 1,
-	"VersionName": "1.0",
-	"FriendlyName": "AW_InteractionSystem",
-	"Description": "A plugin for FPP Interaction System",
-	"Category": "Other",
-	"CreatedBy": "Arek.Wered;",
-	"CreatedByURL": "",
-	"DocsURL": "",
-	"MarketplaceURL": "",
-	"SupportURL": "",
-	"CanContainContent": true,
-	"IsBetaVersion": false,
-	"IsExperimentalVersion": false,
-	"Installed": true,
-	"Modules": [
-		{
-			"Name": "AW_InteractionSystem",
-			"Type": "Runtime",
-			"LoadingPhase": "PreDefault"
-		}
-	],
-	"Plugins": [
-		{
-			"Name": "EnhancedInput",
-			"Enabled": true
-		}
-	]
+    "FileVersion": 3,
+    "Version": 1,
+    "VersionName": "1.0",
+    "FriendlyName": "AW_InteractionSystem",
+    "Description": "A plugin for FPP Interaction System",
+    "Category": "Other",
+    "CreatedBy": "Arek.Wered;",
+    "CreatedByURL": "",
+    "DocsURL": "",
+    "MarketplaceURL": "",
+    "SupportURL": "",
+    "EngineVersion": "5.5.0",
+    "CanContainContent": true,
+    "Installed": false,
+    "Modules": [
+        {
+            "Name": "AW_InteractionSystem",
+            "Type": "Runtime",
+            "LoadingPhase": "Default",
+            "PlatformAllowList": [
+                "Win64"
+            ]
+        }
+    ],
+    "Plugins": [
+        {
+            "Name": "EnhancedInput",
+            "Enabled": true
+        }
+    ]
 }
